# rust-serverless-interface-cli

./: .gitignore  Cargo.toml  Makefile  README.md
config/: serverless.yaml
src/: main.rs
src/api/: schema.rs
src/config/: read.rs
src/shell/: process.rs
templates/: Cargo.tmpl  config.tmpl  main.tmpl
test-artifacts/: payload.json
